[gd_scene load_steps=11 format=3 uid="uid://burbhlms0omvr"]

[ext_resource type="Script" path="res://creep/creep.gd" id="1_c10lr"]
[ext_resource type="Texture2D" uid="uid://b1ntoo1whaq1t" path="res://assets/towerDefense_vector.svg" id="1_fhyd1"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_3hltc"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="4_0dg2o"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="5_jwy25"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="6_vse3m"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="7_7o7md"]

[sub_resource type="AtlasTexture" id="AtlasTexture_75mi6"]
atlas = ExtResource("1_fhyd1")
region = Rect2(968, 648, 48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_elgct"]
radius = 37.0135

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gva2c"]
radius = 20.0
height = 58.0

[node name="Creep" type="Node2D"]
script = ExtResource("1_c10lr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_75mi6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_elgct")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("4_0dg2o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_gva2c")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_compoennt")]
script = ExtResource("5_jwy25")
stats_component = NodePath("../StatsComponent")
hurtbox_compoennt = NodePath("../HurtboxComponent")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("6_vse3m")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "move_stats")]
script = ExtResource("2_3hltc")
actor = NodePath("..")
move_stats = NodePath("../MoveStats")

[node name="MoveStats" type="Node" parent="."]
script = ExtResource("7_7o7md")
speed = 150.0
